docs: css adjustment

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SuperliminalBlackHole</title>
+    <title>PokeApi Cardviewer</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <section>
-      <section><h1>Fuck</h1></section>
+    <header id="pokeballTopEl" class="pokeballTop">
+      <button id="startBtn" class="startBtn"></button>
+    </header>
+    <section id="dashboardEl" class="dashboard">
+      <section class="cardPlatformEl"></section>
+      <section class="pokemonOptionsEl"></section>
+      <section class="cardOptionsEl"></section>
     </section>
+    <footer id="pokeballFooterEl" class="pokeballFooter">
+      SuperliminalBlackHole 2024
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
