style: pokeball start screen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header id="pokeballTopEl" class="pokeballTop">
+    <header>
       <button id="startBtn" class="startBtn"></button>
     </header>
     <section id="dashboardEl" class="dashboard">
@@ -15,9 +15,7 @@
       <section class="pokemonOptionsEl"></section>
       <section class="cardOptionsEl"></section>
     </section>
-    <footer id="pokeballFooterEl" class="pokeballFooter">
-      SuperliminalBlackHole 2024
-    </footer>
+    <footer>SuperliminalBlackHole 2024</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
