feat: open pokeball

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header>
+    <header id="headerEl">
       <button id="startBtn" class="startBtn"></button>
     </header>
     <section id="dashboardEl" class="dashboard">
@@ -15,7 +15,7 @@
       <section class="pokemonOptionsEl"></section>
       <section class="cardOptionsEl"></section>
     </section>
-    <footer>SuperliminalBlackHole 2024</footer>
+    <footer id="footerEl">SuperliminalBlackHole 2024</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
