feat: card added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <button id="startBtn" class="startBtn"></button>
     </header>
     <section id="dashboardEl" class="dashboard">
-      <section class="cardPlatformEl"></section>
+      <section class="cardPlatform">
+        <section id="cardEl" class="cardEmpty"></section>
+      </section>
       <section class="pokemonOptionsEl"></section>
       <section class="cardOptionsEl"></section>
     </section>
