feat: add card face

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     </header>
     <section id="dashboardEl" class="dashboard">
       <section class="cardPlatform">
-        <section id="cardEl" class="cardEmpty"></section>
+        <section id="cardEl" class="cardEmpty">
+          <section class="title">
+            <h1 id="nameEl"></h1>
+            <h2 id="hpEl"></h2>
+          </section>
+          <section id="cardfaceEl" class="cardfaceEmpty">
+            <img src="" alt="" />
+          </section>
+        </section>
       </section>
       <section class="pokemonOptionsEl"></section>
       <section class="cardOptionsEl"></section>
