style: bottom of pokeball

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
       <section class="pokemonOptionsEl"></section>
       <section class="cardOptionsEl"></section>
     </section>
-    <footer id="footerEl">SuperliminalBlackHole 2024</footer>
+    <footer id="footerEl">
+      <section id="pokeballBottomEl" class="pokeballBottom"></section>
+      <h6>SuperliminalBlackHole 2024</h6>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
