feat: add option buttons

--- a/index.html
+++ b/index.html
@@ -22,8 +22,20 @@
           </section>
         </section>
       </section>
-      <section class="pokemonOptionsEl"></section>
-      <section class="cardOptionsEl"></section>
+      <section class="options">
+        <button id="pokemonOptionsEl" class="optionsBtn">
+          <img
+            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png"
+            alt=""
+            class="pikachu"
+          />
+        </button>
+        <button id="cardOptionsEl" class="optionsBtn">
+          <section class="cardIcon">
+            <section class="cardIconFace"></section>
+          </section>
+        </button>
+      </section>
     </section>
     <footer id="footerEl">
       <section id="pokeballBottomEl" class="pokeballBottom"></section>
