feat: add detail ribbon

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
           <section id="cardfaceEl" class="cardfaceEmpty">
             <img src="" alt="" />
           </section>
+          <h4 id="detailRibbonEl" class="hide">
+            {type} Pokemon. HT: 00m, WT: 00lbs
+          </h4>
         </section>
       </section>
       <section class="options">
