feat: add card elements

--- a/index.html
+++ b/index.html
@@ -15,14 +15,35 @@
         <section id="cardEl" class="cardEmpty">
           <section class="title">
             <h1 id="nameEl"></h1>
-            <h2 id="hpEl"></h2>
+            <h1 id="hpEl"></h1>
           </section>
           <section id="cardfaceEl" class="cardfaceEmpty">
             <img src="" alt="" />
+            <!-- <img
+              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/showdown/157.gif"
+              id="imgEl"
+            /> -->
           </section>
-          <h4 id="detailRibbonEl" class="hide">
-            {type} Pokemon. HT: 00m, WT: 00lbs
-          </h4>
+          <h4 id="detailRibbonEl" class="detailRibbon"></h4>
+          <!-- {type} Pokemon. HT: 00m, WT: 00lbs -->
+          <section class="moveNode">
+            <img />
+            <p id="baseMoveEl"></p>
+            <p id="attackEl"></p>
+          </section>
+          <section class="moveNode">
+            <img />
+            <p id="specialMoveEl"></p>
+            <p id="specialAttackEl"></p>
+          </section>
+          <section id="cardFooterEl" class="cardFooter">
+            <section id="abilityEl" class="ability"></section>
+            <section id="infoBoxEl" class="infoBox"></section>
+            <section class="cardBottom">
+              2024 SuperliminalBlackHole
+              <section class="cornerIcon">★</section>
+            </section>
+          </section>
         </section>
       </section>
       <section class="options">
