docs: set up vars

--- a/index.html
+++ b/index.html
@@ -18,20 +18,16 @@
             <h1 id="hpEl"></h1>
           </section>
           <section id="cardfaceEl" class="cardfaceEmpty">
-            <img src="" alt="" />
-            <!-- <img
-              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/showdown/157.gif"
-              id="imgEl"
-            /> -->
+            <img id="pkmnImg" src="" alt="" />
           </section>
           <h4 id="detailRibbonEl" class="detailRibbon"></h4>
           <!-- {type} Pokemon. HT: 00m, WT: 00lbs -->
-          <section class="moveNode">
+          <section id="moveNodeEl" class="moveNode">
             <img />
             <p id="baseMoveEl"></p>
             <p id="attackEl"></p>
           </section>
-          <section class="moveNode">
+          <section id="moveNodeEl" class="moveNode">
             <img />
             <p id="specialMoveEl"></p>
             <p id="specialAttackEl"></p>
@@ -39,7 +35,7 @@
           <section id="cardFooterEl" class="cardFooter">
             <section id="abilityEl" class="ability"></section>
             <section id="infoBoxEl" class="infoBox"></section>
-            <section class="cardBottom">
+            <section id="cardBottomEl" class="cardBottom">
               2024 SuperliminalBlackHole
               <section class="cornerIcon">★</section>
             </section>
