--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="dashboardEl" class="dashboard">
       <section class="cardPlatform">
         <section id="cardEl" class="cardEmpty">
-          <section class="title">
+          <section id="titleEl" class="title">
             <h1 id="nameEl"></h1>
             <h1 id="hpEl"></h1>
           </section>
@@ -33,7 +33,7 @@
             <p id="baseMoveEl"></p>
             <p id="attackEl"></p>
           </section>
-          <section id="moveNodeEl" class="moveNode">
+          <section id="specialNodeEl" class="moveNode">
             <img />
             <p id="specialMoveEl"></p>
             <p id="specialAttackEl"></p>
