feat: docs: menu upload

--- a/index.html
+++ b/index.html
@@ -49,18 +49,51 @@
         </section>
       </section>
       <section class="options">
-        <button id="pokemonOptionsEl" class="optionsBtn">
+        <!-- <button id="pokemonOptionsBtn" class="optionsBtn">
           <img
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png"
-            alt=""
+            alt="pikachu"
             class="pikachu"
           />
         </button>
-        <button id="cardOptionsEl" class="optionsBtn">
-          <section class="cardIcon">
+        <button id="cardOptionsBtn" class="optionsBtn">
+          <section id="cardMenuIcon" class="cardIcon">
             <section class="cardIconFace"></section>
           </section>
-        </button>
+        </button> -->
+
+        <section id="pokemonMenuEl" class="hide">
+          <section class="menuRow">
+            <form action="">
+              <input type="text" placeholder="Type a Pokemon Name or #ID" />
+            </form>
+            <button>???</button>
+          </section>
+          <section class="menuRow">
+            <button>Shiny</button>
+            <button>TypeLock</button>
+          </section>
+          <section class="menuRow">
+            <button>Reg</button>
+            <button>Home</button>
+            <button>Sprite</button>
+          </section>
+          <section class="menuRow">
+            <button>Dream</button>
+            <button>Showdown</button>
+            <button>Alolan</button>
+          </section>
+          <section class="menuRow">
+            <button>V</button>
+            <button>V</button>
+            <button>V</button>
+          </section>
+          <section class="menuRow">
+            <button>H1</button>
+            <button>H2</button>
+            <button>H3</button>
+          </section>
+        </section>
       </section>
     </section>
     <footer id="footerEl">
